# remote_drive

./: .gitignore  README.md
app/: CMakeLists.txt  README.md
app/base/: BaseFunc.cpp  BaseFunc.h  CMakeLists.txt  Defer.cpp  Defer.h  MediaTools.cpp  MediaTools.h  SoLogger.cpp  SoLogger.h  SysInfo.cpp  SysInfo.h  ffmpeg推流.txt
app/car/: BusinessFun.cpp  BusinessFun.h  CMakeLists.txt  Config.cpp  Config.h  ConfigCar.ini  DispatchClient.cpp  DispatchClient.h  TaskPump.cpp  TaskPump.h  VERSION  main.cpp
app/car_bridge/: go.mod  go.sum  main.go
app/common/: CMakeLists.txt  CarData.cpp  CarData.h  Common.cpp  Common.h  Defines.h  HttpClient.cpp  HttpClient.h  UpdateDetector.cpp  UpdateDetector.h  WebSocket.cpp  WebSocket.h  WebSocketServerHost.cpp  WebSocketServerHost.h
app/driver/: CMakeLists.txt  ConfigDriver.ini  main.cpp
app/driver/common/: Config.cpp  Config.h  DriverDefines.h  LogitechHub.cpp  LogitechHub.h
app/driver/res/: res.qrc  res.rc  resource.h  version.h
app/driver/res/language/: app_en_US.ts  app_zh_CN.ts
app/driver/server_core/: DispatchClient.cpp  DispatchClient.h
app/driver/ui/: leftvideowindow.cpp  leftvideowindow.h  leftvideowindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagewidget.cpp  messagewidget.h  messagewidget.ui  rightvideowindow.cpp  rightvideowindow.h  rightvideowindow.ui  speedsetwindow.cpp  speedsetwindow.h  speedsetwindow.ui  updateprocesswindow.cpp  updateprocesswindow.h  updateprocesswindow.ui
app/driver/ui/control/: CarMedia.cpp  CarMedia.h  MediaElement.cpp  MediaElement.h  OpenGLView.cpp  OpenGLView.h  SceneMap.cpp  SceneMap.h  carinfoitem.cpp  carinfoitem.h  carinfoitem.ui  qoregionlistitem.cpp  qoregionlistitem.h  qoregionlistitem.ui
app/driver/ui/shader/: shader.fs  shader.vs
app/linux_install/: Dockerfile  build_car_dockerimage.sh  build_car_installer.sh
app/test/: test_websocket.py
app/windows_install/: setup.bat  setup.iss  version.h
doc/: 架构设计图.vsdx  概要设计.docx
go_server/: README.md  go.mod  go.sum
go_server/base/: base.go
go_server/base/jwt/: jwt.go
go_server/common/: defines.go
go_server/dispatch/: api_handle.go  client.go  hub.go  main.go
go_server/doc/: 通信说明.md
go_server/logistics/: api_handle.go  main.go
go_server/logistics/static/package/driver/: update_log.html  version
